--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,162 @@
+:root {
+  --main-bg-color: #22262c;
+  --light-theme-color: #fff;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: var(--light-theme-color);
+}
+
 .App {
+  height: 100vh;
+  width: 100vw;
+}
+
+li {
+  list-style-type: none;
+}
+
+/* .nav-center {
+  display: flex;
+  justify-content: space-between;
+} */
+
+/* Link     nav-header */
+.nav-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+/****************** Links***************** */
+.links a {
+  font-size: 1rem;
+  text-transform: capitalize;
+  display: block;
+  margin-left: 15px;
+}
+
+.links {
+  height: 0;
+  overflow: hidden;
+}
+
+.link-btn {
+  color: var(--light-theme-color);
+  background-color: #bc1e4a;
+  height: 2rem;
+  line-height: 2rem;
+  text-align: center;
+  min-width: 5rem;
+  padding: 10px;
+  /* padding: 0.5rem 2rem; */
+  border-radius: 5px;
+  text-transform: uppercase;
+  border: 2px solid transparent;
+}
+
+.link-btn:hover {
+  border-color: #bc1e4a;
+  background-color: transparent;
+  color: #bc1e4a;
+}
+
+/* name color in header */
+.portfolio {
+  color: #bc1e4a;
+}
+
+/* **************************************** */
+
+/* About Component */
+.about {
+  display: grid;
+  place-items: center;
+  padding: 2rem;
+}
+
+.skills {
+  text-align: center;
+  color: #bc1e4a;
+}
+
+.info {
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  text-align: center;
+  padding: 2rem;
+}
+.grid-icons {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 2.5rem;
+  margin-top: 1rem;
   text-align: center;
 }
+/* *********************************************** */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Home Component */
+
+/* image in home*/
+img {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* class for image */
+.profile {
+  width: 400px;
+  height: 400px;
+  /* border-radius: 50%; */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* padding: 2rem; */
+}
+.flex-social {
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
+}
+.social-icons {
+  width: 50%;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* *********************************************** */
+@media screen and (min-width: 800px) {
+  .nav-center {
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
   }
-  to {
-    transform: rotate(360deg);
+  .nav-header {
+    padding: 0;
   }
+  .nav-toggle {
+    display: none;
+  }
+  .links {
+    height: auto;
+    display: flex;
+    justify-content: left;
+  }
+  /* .links a {
+    padding: 0;
+    margin: 0 0.5rem;
+  } */
+  /* .links a:hover {
+    padding: 0;
+    background: transparent;
+  } */
 }
